[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/retro-gaming-36.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Multiplayer.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/retro-gaming-56.tres" type="DynamicFont" id=4]

[node name="Multiplayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -648, -120 )
script = ExtResource( 3 )

[node name="CenteredEntries" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="TitleAndEntries" type="VBoxContainer" parent="CenteredEntries"]
margin_left = 440.0
margin_top = 66.0
margin_right = 839.0
margin_bottom = 654.0
alignment = 1

[node name="CenteredTitle" type="CenterContainer" parent="CenteredEntries/TitleAndEntries"]
margin_right = 399.0
margin_bottom = 147.0

[node name="Title" type="Label" parent="CenteredEntries/TitleAndEntries/CenteredTitle"]
margin_right = 399.0
margin_bottom = 147.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Multiplayer
"

[node name="Entries" type="VBoxContainer" parent="CenteredEntries/TitleAndEntries"]
margin_top = 151.0
margin_right = 399.0
margin_bottom = 489.0
custom_constants/separation = 32

[node name="CreateServerButton" type="Button" parent="CenteredEntries/TitleAndEntries/Entries"]
margin_right = 399.0
margin_bottom = 50.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Create Server"

[node name="HSeparator" type="HSeparator" parent="CenteredEntries/TitleAndEntries/Entries"]
margin_top = 82.0
margin_right = 399.0
margin_bottom = 86.0

[node name="ServerIpInput" type="LineEdit" parent="CenteredEntries/TitleAndEntries/Entries"]
unique_name_in_owner = true
margin_top = 118.0
margin_right = 399.0
margin_bottom = 174.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "Enter IP address"

[node name="JoinServerButton" type="Button" parent="CenteredEntries/TitleAndEntries/Entries"]
margin_top = 206.0
margin_right = 399.0
margin_bottom = 256.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Join Server"

[node name="Back" type="Button" parent="CenteredEntries/TitleAndEntries/Entries"]
margin_top = 288.0
margin_right = 399.0
margin_bottom = 338.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "< Back"

[node name="CenteredIP" type="CenterContainer" parent="CenteredEntries/TitleAndEntries"]
margin_top = 493.0
margin_right = 399.0
margin_bottom = 588.0

[node name="IpLabel" type="Label" parent="CenteredEntries/TitleAndEntries/CenteredIP"]
unique_name_in_owner = true
margin_left = 100.0
margin_right = 299.0
margin_bottom = 95.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "
Your IP: "

[connection signal="pressed" from="CenteredEntries/TitleAndEntries/Entries/CreateServerButton" to="." method="_on_CreateServerButton_pressed"]
[connection signal="pressed" from="CenteredEntries/TitleAndEntries/Entries/JoinServerButton" to="." method="_on_JoinServerButton_pressed"]
[connection signal="pressed" from="CenteredEntries/TitleAndEntries/Entries/Back" to="." method="_on_Back_pressed"]
